[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/player/health.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/weapons/weapon_pistol.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player/weapons/weapon_manager.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/hud/hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/player/weapons/weapon_unarmed.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/enemy/enemy.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.75

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("RotationHelper:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.4239, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RotationHelper:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.4239, 0 ), Vector3( 0, 0.585816, 0 ) ]
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Enemy" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.875, 0 )
shape = SubResource( 1 )

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4239, 0 )

[node name="WallRunRotationHelper" type="Spatial" parent="RotationHelper"]

[node name="Camera" type="Camera" parent="RotationHelper/WallRunRotationHelper"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
current = true
far = 1000.0

[node name="RayCast" type="RayCast" parent="RotationHelper/WallRunRotationHelper/Camera"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
cast_to = Vector3( 0, 0, 100 )

[node name="Weapons" type="Spatial" parent="RotationHelper"]
script = ExtResource( 4 )

[node name="WeaponUnarmed" parent="RotationHelper/Weapons" instance=ExtResource( 6 )]

[node name="WeaponPistol" parent="RotationHelper/Weapons" instance=ExtResource( 3 )]

[node name="Health" type="Spatial" parent="RotationHelper"]
script = ExtResource( 1 )
hud_path = NodePath("../../HUD")

[node name="Timers" type="Spatial" parent="."]

[node name="WallrunTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Active = SubResource( 2 )
anims/Knocked_Down = SubResource( 3 )
[connection signal="timeout" from="Timers/WallrunTimer" to="." method="_on_WallrunTimer_timeout"]

[editable path="RotationHelper/Weapons/WeaponPistol"]
